--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/inspect.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/inspect.adoc
@@ -32,7 +32,7 @@ Gradle provides multiple ways to inspect your build:
 
 == What is a Build Scan?
 
-https://scans.gradle.com/[Build scans] are a persistent, shareable record of what happened when running a build.
+https://scans.gradle.com/[Build Scans] are a persistent, shareable record of what happened when running a build.
 They provide detailed insights you can use to diagnose performance issues, identify build failures, and share context with your team.
 
 Build Scans are created locally but published to a secure external server managed by Gradle.
@@ -58,7 +58,7 @@ At the end of your build, Gradle displays a URL where you can find your Build Sc
 BUILD SUCCESSFUL in 2s
 4 actionable tasks: 4 executed
 
-Publishing build scan...
+Publishing Build Scan...
 https://gradle.com/s/e6ircx2wjbf7e
 ----
 
@@ -69,7 +69,7 @@ This section explains how to profile your build with Build Scans.
 The performance page can help use Build Scans to profile a build.
 To get there, click _"Performance"_ in the left hand navigation menu or follow the "Explore performance" link on the Build Scan home page:
 
-image::performance/build-scan-home.png[title="Performance page link on build scan home page"]
+image::performance/build-scan-home.png[title="Performance page link on Build Scan home page"]
 
 The performance page shows how long it took to complete different stages of a build.
 This page shows how long it took to:
@@ -82,12 +82,12 @@ This page shows how long it took to:
 You also get details about environmental properties, such as whether a daemon was used or not.
 
 [[build-scan-performance]]
-image::performance/build-scan-performance-page.png[title="Build scan performance page"]
+image::performance/build-scan-performance-page.png[title="Build Scan performance page"]
 
 In the above Build Scan, configuration takes over 13 seconds.
 Click on the _"Configuration"_ tab to break this stage into component parts, exposing the cause of the slowness.
 
-image::performance/build-scan-configuration-breakdown.png[title="Build scan configuration breakdown"]
+image::performance/build-scan-configuration-breakdown.png[title="Build Scan configuration breakdown"]
 
 Here you can see the scripts and plugins applied to the project in descending order of how long they took to apply.
 The slowest plugin and script applications are good candidates for optimization.
