--- a/platforms/documentation/docs/src/docs/userguide/running-builds/tutorial/part3_gradle_dep_man.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/tutorial/part3_gradle_dep_man.adoc
@@ -219,11 +219,11 @@ $ ./gradlew build --scan
 BUILD SUCCESSFUL in 423ms
 7 actionable tasks: 7 up-to-date
 
-Publishing a build scan to scans.gradle.com requires accepting the Gradle Terms of Service defined at https://gradle.com/terms-of-service. Do you accept these terms? [yes, no] yes
+Publishing a Build Scan to scans.gradle.com requires accepting the Gradle Terms of Service defined at https://gradle.com/terms-of-service. Do you accept these terms? [yes, no] yes
 
 Gradle Terms of Service accepted.
 
-Publishing build scan...
+Publishing Build Scan...
 https://gradle.com/s/link
 ----
 
