--- a/platforms/documentation/docs/src/docs/userguide/dep-man/publishing/publishing_maven.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/dep-man/publishing/publishing_maven.adoc
@@ -173,14 +173,13 @@ This includes a wide range of Maven-compatible repositories, such as:
 [[maven_central]]
 === Publishing to Maven Central
 
-The service commonly known as *Maven Central*, operated by Sonatype and officially hosted at link:https://central.sonatype.com/[central.sonatype.com] is a widely used repository for distributing Java and Kotlin libraries.
+The service commonly known as *Maven Central* and hosted at link:https://central.sonatype.com/[central.sonatype.com] is a widely used repository for distributing Java and Kotlin libraries.
 
 As of **June 30, 2025**, Maven Central no longer supports the legacy deployment protocol used by the link:https://maven.apache.org/plugins/maven-deploy-plugin/[Maven Deploy Plugin].
 This change also marks the deprecation of the OSSRH (OSS Repository Hosting) service.
 
-Going forward, publishing to Maven Central **requires a dedicated third-party plugin**.
-Several community-supported options are available.
-
+Going forward, publishing to Maven Central **requires a dedicated plugin**.
+Several options are available.
 For guidance and recommendations, see the link:https://cookbook.gradle.org/integrations/maven-central/publishing/[Publishing to Maven Central] page in the Gradle Cookbook.
 
 [[publishing_maven:snapshot_and_release_repositories]]
