Use "Develocity plugin" instead of "Build Scan plugin"

--- a/platforms/documentation/docs/src/docs/userguide/licenses.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/licenses.adoc
@@ -27,4 +27,4 @@ Gradle's User Manual and DSL Reference Manual are licensed under link:http://cre
 [[licenses:build_scan_plugin]]
 == Gradle Build Scan Plugin
 
-Use of the link:https://scans.gradle.com/plugin/[Build Scan plugin] is subject to link:https://gradle.com/legal/terms-of-service/[Gradle's Terms of Service].
+Use of the link:https://scans.gradle.com/plugin/[Develocity plugin] is subject to link:https://gradle.com/legal/terms-of-service/[Gradle's Terms of Service].
