Apply suggestions from code review
Co-authored-by: Laura Kassovic <lkassovic@gradle.com>
Signed-off-by: Justin <justinvandort@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -656,15 +656,15 @@ This behavior previously caused a warning: `Gradle Module Metadata is modified a
 
 It will now fail with an error, suggesting a review of the relevant documentation.
 
-==== New subtypes of ComponentIdentifier introduced
+==== New subtypes of `ComponentIdentifier` introduced
 
-Gradle 9.0 introduces link:{javadocPath}/org/gradle/api/artifacts/component/RootComponentIdentifier.html)[RootComponentIdentifier], a new subtype of link:{javadocPath}/org/gradle/api/artifacts/component/ComponentIdentifier.html)[ComponentIdentifier].
+Gradle 9.0 introduces link:{javadocPath}/org/gradle/api/artifacts/component/RootComponentIdentifier.html)[`RootComponentIdentifier`], a new subtype of link:{javadocPath}/org/gradle/api/artifacts/component/ComponentIdentifier.html)[`ComponentIdentifier`].
 
 APIs which return instances of `ComponentIdentifier` may now return identifier instances of this new type.
-For example, the link:{javadocPath}/org/gradle/api/artifacts/result/ComponentResult.html)[ComponentResult], link:{javadocPath}/org/gradle/api/artifacts/result/ResolvedVariantResult.html)[ResolvedVariantResult], and link:{javadocPath}/org/gradle/api/artifacts/ArtifactView.ViewConfiguration.html)[ArtifactView], APIs, among others, are affected.
+For example, the link:{javadocPath}/org/gradle/api/artifacts/result/ComponentResult.html)[`ComponentResult`], link:{javadocPath}/org/gradle/api/artifacts/result/ResolvedVariantResult.html)[`ResolvedVariantResult`], and link:{javadocPath}/org/gradle/api/artifacts/ArtifactView.ViewConfiguration.html)[`ArtifactView`] APIs, among others, are affected.
 
-In future Gradle versions, new subtypes of `ComponentIdentifier` may continue to be added.
-Build logic should remain resilient to unknown subtypes of `ComponentIdentifier` being returned by Gradle APIs.
+In future Gradle versions, additional subtypes of `ComponentIdentifier` may be introduced.
+Build logic should remain resilient to unknown `ComponentIdentifier` subtypes returned by Gradle APIs.
 
 === Task Changes
 
